Update13 index.html

--- a/index.html
+++ b/index.html
@@ -655,11 +655,11 @@
 
 О нем : 
 • Бомж
-• Немощь
+• Без умений
 • Скамит даже на 15 звёзд ( бомж мелочный )
-• Пиздабол
+• Пустослов 
 • Интернет герой 
-• НН 
+• НН - неизвестный даже самому телеграмму 
 
 [ В общем бич, удачи всем ]"
             data-img="https://files.catbox.moe/u14hzp.jpg"
