--- a/index.html
+++ b/index.html
@@ -880,310 +880,313 @@
       >
     </div>
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    // Помечаем fame у списков по id
-    document.querySelectorAll('[data-parent="fame"]').forEach((el) => {
-      if (!el.dataset.fame && el.id?.startsWith("fame-")) {
-        el.dataset.fame = el.id.replace("fame-", "");
+document.addEventListener("DOMContentLoaded", () => {
+  // Проставляем data-fame
+  document.querySelectorAll('[data-parent="fame"]').forEach((el) => {
+    if (!el.dataset.fame && el.id?.startsWith("fame-")) {
+      el.dataset.fame = el.id.replace("fame-", "");
+    }
+  });
+
+  const welcomeBtn = document.getElementById("welcomeBtn");
+  const welcomeModal = document.getElementById("welcomeModal");
+  const mainContent = document.getElementById("mainContent");
+  const tabsMain = document.querySelectorAll(".tabs-main button");
+  const tabsFame = document.querySelectorAll(".tabs-fame button");
+  const allLists = document.querySelectorAll(".list");
+  const fameTabsWrapper = document.querySelector(".tabs-fame-wrapper");
+  const searchInput = document.getElementById("searchInput");
+  const searchInfo = document.getElementById("searchInfo");
+
+  let activeMain = "fame",
+      activeFame = "big";
+
+  welcomeBtn.onclick = () => {
+    welcomeModal.style.display = "none";
+    mainContent.style.display = "block";
+    searchInput.focus();
+    updateLists();
+  };
+
+  tabsMain.forEach((btn) => {
+    btn.onclick = () => {
+      if (btn.dataset.tab !== activeMain) {
+        tabsMain.forEach((b) => b.classList.remove("active"));
+        btn.classList.add("active");
+        activeMain = btn.dataset.tab;
+        fameTabsWrapper.style.display = "none";
+        searchInput.value = "";
+        searchInfo.textContent = "";
+        updateLists();
+      }
+    };
+  });
+
+  tabsFame.forEach((btn) => {
+    btn.onclick = () => {
+      if (btn.dataset.fame !== activeFame) {
+        tabsFame.forEach((b) => b.classList.remove("active"));
+        btn.classList.add("active");
+        activeFame = btn.dataset.fame;
+        searchInput.value = "";
+        searchInfo.textContent = "";
+        updateLists();
+      }
+    };
+  });
+
+  function updateLists() {
+    allLists.forEach((list) => {
+      const fame = list.dataset.fame;
+      const parent = list.dataset.parent;
+
+      if (activeMain === "fame") {
+        if (parent === "fame" && fame === activeFame) {
+          list.style.display = "block";
+        } else {
+          list.style.display = "none";
+        }
+        fameTabsWrapper.style.display = "flex";
+      } else {
+        if (parent === activeMain) {
+          list.style.display = "block";
+        } else {
+          list.style.display = "none";
+        }
+        fameTabsWrapper.style.display = "none";
       }
     });
+  }
 
-    const welcomeBtn = document.getElementById("welcomeBtn");
-    const welcomeModal = document.getElementById("welcomeModal");
-    const mainContent = document.getElementById("mainContent");
-    const tabsMain = document.querySelectorAll(".tabs-main button");
-    const tabsFame = document.querySelectorAll(".tabs-fame button");
-    const allLists = document.querySelectorAll(".list");
-    const fameTabsWrapper = document.querySelector(".tabs-fame-wrapper");
-    const searchInput = document.getElementById("searchInput");
-    const searchInfo = document.getElementById("searchInfo");
+  // Поиск в основном input с уникальными результатами
+  searchInput.oninput = () => {
+    const q = searchInput.value.toLowerCase().trim();
+    const contentArea = document.getElementById("contentArea");
 
-    // Кнопка приветствия
-    welcomeBtn.onclick = () => {
-      welcomeModal.style.display = "none";
-      mainContent.style.display = "block";
-      searchInput.focus();
+    if (!q) {
+      fameTabsWrapper.style.display = "none";
       updateLists();
-    };
-
-    let activeMain = "fame",
-        activeFame = "big";
-
-    // Основные вкладки
-    tabsMain.forEach((btn) => {
-      btn.onclick = () => {
-        if (btn.dataset.tab !== activeMain) {
-          tabsMain.forEach((b) => b.classList.remove("active"));
-          btn.classList.add("active");
-          activeMain = btn.dataset.tab;
-          fameTabsWrapper.style.display = "none";
-          searchInput.value = "";
-          searchInfo.textContent = "";
-          updateLists();
-        }
-      };
-    });
-
-    // Подвкладки fame
-    tabsFame.forEach((btn) => {
-      btn.onclick = () => {
-        if (btn.dataset.fame !== activeFame) {
-          tabsFame.forEach((b) => b.classList.remove("active"));
-          btn.classList.add("active");
-          activeFame = btn.dataset.fame;
-          searchInput.value = "";
-          searchInfo.textContent = "";
-          updateLists();
-        }
-      };
-    });
-
-    // Обновление отображаемых списков
-    function updateLists() {
-      allLists.forEach((list) => {
-        const fame = list.dataset.fame;
-        const parent = list.dataset.parent;
-
-        if (activeMain === "fame") {
-          if (parent === "fame" && fame === activeFame) {
-            list.style.display = "block";
-          } else {
-            list.style.display = "none";
-          }
-          fameTabsWrapper.style.display = "flex";
-        } else {
-          if (parent === activeMain) {
-            list.style.display = "block";
-          } else {
-            list.style.display = "none";
-          }
-          fameTabsWrapper.style.display = "none";
-        }
-      });
+      searchInfo.textContent = "";
+      return;
     }
 
-    // Поиск в основном интерфейсе
-    searchInput.oninput = () => {
-      const q = searchInput.value.toLowerCase().trim();
-      const contentArea = document.getElementById("contentArea");
+    contentArea.innerHTML = "";
+    const results = [];
+    const seen = new Set();
 
-      if (!q) {
-        fameTabsWrapper.style.display = activeMain === "fame" ? "flex" : "none";
-        updateLists();
-        searchInfo.textContent = "";
-        return;
-      }
-
-      contentArea.innerHTML = "";
-      const results = [];
-      const seen = new Set();
-
-      allLists.forEach((list) => {
-        list.querySelectorAll(".list-item").forEach((item) => {
-          const name = item.dataset.name?.toLowerCase() || "";
-          const desc = item.dataset.desc?.toLowerCase() || "";
-          if ((name.includes(q) || desc.includes(q)) && !seen.has(name)) {
-            seen.add(name);
-            const clone = item.cloneNode(true);
-            clone.style.display = "flex";
-            results.push(clone);
-          }
-        });
-      });
-
-      if (results.length === 0) {
-        contentArea.innerHTML = `<p style="color:#f88;">Ничего не найдено</p>`;
-        searchInfo.textContent = "";
-        return;
-      }
-
-      const wrapper = document.createElement("div");
-      wrapper.className = "list";
-      wrapper.style.display = "block";
-      results.forEach((item) => wrapper.appendChild(item));
-      contentArea.appendChild(wrapper);
-
-      searchInfo.textContent = `Найдено совпадений: ${results.length}`;
-    };
-
-// Создание модального окна поиска
-const searchModal = document.createElement("div");
-searchModal.id = "searchModal";
-searchModal.style.cssText = `
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(12px);
-  z-index: 9999;
-  display: flex;
-  justify-content: center;
-  align-items: center; /* ✅ фиксированный центр */
-  box-sizing: border-box;
-  font-family: 'Segoe UI', sans-serif;
-  flex-direction: column;
-`;
-
-
-searchModal.innerHTML = `
-  <div style="
-    background: #140024;
-    border: 1px solid #8026ff;
-    border-radius: 18px;
-    padding: 24px;
-    width: 90%;
-    max-width: 850px;
-    max-height: 75vh;
-    overflow-y: auto;
-    box-shadow: 0 0 25px rgba(142, 45, 226, 0.4);
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    animation: fadeScaleIn 0.2s ease;
-  ">
-    <button id="closeSearchModal" style="
-      position: absolute;
-      top: 16px;
-      right: 20px;
-      background: none;
-      border: none;
-      font-size: 22px;
-      color: #c47aff;
-      cursor: pointer;
-    ">✖</button>
-
-    <input id="searchInputModal" type="text" placeholder="🔍 Поиск по имени или описанию..." style="
-      width: 100%;
-      padding: 14px 18px;
-      font-size: 16px;
-      border-radius: 12px;
-      border: 1px solid #4e0a99;
-      outline: none;
-      background: #1b0033;
-      color: #fff;
-      box-shadow: 0 0 12px rgba(142, 45, 226, 0.2);
-      transition: border 0.2s;
-    " />
-
-    <div id="searchResults" style="
-      flex: 1;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-      color: #ccc;
-      font-size: 15px;
-    ">
-      <p style="color:#666;">Введите текст для поиска...</p>
-    </div>
-  </div>
-`;
-
-    document.body.appendChild(searchModal);
-
-    const searchInputModal = document.getElementById("searchInputModal");
-    const resultsContainer = document.getElementById("searchResults");
-
-    // Поиск в модальном окне
-    searchInputModal.oninput = () => {
-      const q = searchInputModal.value.toLowerCase().trim();
-      resultsContainer.innerHTML = "";
-
-      if (!q) {
-        resultsContainer.innerHTML = "<p style='color:#666;'>Введите текст для поиска...</p>";
-        return;
-      }
-
-      const allItems = document.querySelectorAll(".list-item");
-      const results = [];
-      const seen = new Set();
-
-      allItems.forEach((item) => {
-        const name = (item.dataset.name || "").toLowerCase().trim();
-        const desc = (item.dataset.desc || "").toLowerCase().trim();
-
-        if ((name.includes(q) || desc.includes(q)) && !seen.has(name)) {
+    allLists.forEach((list) => {
+      list.querySelectorAll(".list-item").forEach((item) => {
+        const name = item.dataset.name?.toLowerCase() || "";
+        if (item.textContent.toLowerCase().includes(q) && !seen.has(name)) {
           seen.add(name);
           const clone = item.cloneNode(true);
           clone.style.display = "flex";
           results.push(clone);
         }
       });
-
-      if (results.length === 0) {
-        resultsContainer.innerHTML = "<p style='color:#555;'>🚫 Ничего не найдено...</p>";
-        return;
-      }
-
-      const wrapper = document.createElement("div");
-      wrapper.className = "list";
-      wrapper.style.display = "block";
-      results.forEach((item) => wrapper.appendChild(item));
-      resultsContainer.appendChild(wrapper);
-    };
-
-    // Кнопка закрытия модального окна поиска
-    document.getElementById("closeSearchModal").onclick = () => {
-      searchModal.style.display = "none";
-      searchInputModal.value = "";
-      resultsContainer.innerHTML = "<p style='color:#666;'>Введите текст для поиска...</p>";
-    };
-
-    // Открытие модального окна поиска по клику на основной input
-    if (searchInput) {
-      searchInput.addEventListener("click", () => {
-        searchModal.style.display = "flex";
-        searchInputModal.value = "";
-        resultsContainer.innerHTML = "<p style='color:#666;'>Введите текст для поиска...</p>";
-        searchInputModal.focus();
-      });
-    }
-
-    // Инициализация отображения списков
-    fameTabsWrapper.style.display = "none";
-    updateLists();
-
-    // Клик по элементу списка - показать модальное окно с детальной информацией
-    document.body.addEventListener("click", (e) => {
-      const item = e.target.closest(".list-item");
-      if (!item) return;
-      const name = item.dataset.name;
-      const desc = item.dataset.desc;
-      const img = item.dataset.img || "https://cdn-icons-png.flaticon.com/512/847/847969.png";
-
-      const modal = document.createElement("div");
-      modal.className = "modal-user";
-      modal.style.cssText = `
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background: #140024;
-        border: 1px solid #8026ff;
-        border-radius: 18px;
-        padding: 24px;
-        max-width: 400px;
-        width: 90%;
-        box-shadow: 0 0 25px rgba(142, 45, 226, 0.4);
-        color: white;
-        z-index: 10001;
-        cursor: pointer;
-      `;
-      modal.innerHTML = `
-        <img src="${img}" style="max-width: 100%; border-radius: 12px; margin-bottom: 16px;" />
-        <h3>${name}</h3>
-        <p>${desc}</p>
-        <small style="opacity: 0.7;">Нажмите, чтобы закрыть</small>
-      `;
-      modal.onclick = () => modal.remove();
-      document.body.appendChild(modal);
     });
 
+    if (results.length === 0) {
+      contentArea.innerHTML = `<p style="color:#f88;">Ничего не найдено</p>`;
+      searchInfo.textContent = "";
+      return;
+    }
+
+    const wrapper = document.createElement("div");
+    wrapper.className = "list";
+    wrapper.style.display = "block";
+    results.forEach((item) => wrapper.appendChild(item));
+    contentArea.appendChild(wrapper);
+
+    searchInfo.textContent = `Найдено совпадений: ${results.length}`;
+  };
+
+  // Создание и вставка модального поиска (оставляем без изменений)
+  const style = document.createElement("style");
+  style.textContent = `
+    #searchModal div::-webkit-scrollbar {
+      width: 8px;
+    }
+    #searchModal div::-webkit-scrollbar-thumb {
+      background-color: #8e2de2;
+      border-radius: 10px;
+    }
+    #searchModal div::-webkit-scrollbar-track {
+      background: #1a0033;
+    }
+    @keyframes fadeScaleIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }`;
+  document.head.appendChild(style);
+
+  const searchModal = document.createElement("div");
+  searchModal.id = "searchModal";
+  searchModal.style.cssText = `
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw; height: 100vh;
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(12px);
+    z-index: 9999;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 60px;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', sans-serif;
+  `;
+
+  searchModal.innerHTML = `
+    <div style="
+      background: #140024;
+      border: 1px solid #8026ff;
+      border-radius: 18px;
+      padding: 24px;
+      width: 90%;
+      max-width: 850px;
+      max-height: 75vh;
+      overflow-y: auto;
+      box-shadow: 0 0 25px rgba(142, 45, 226, 0.4);
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      min-height: 400px;
+      animation: fadeScaleIn 0.2s ease;
+    ">
+      <input id="searchInputModal" type="text" placeholder="🔍 Поиск по имени или описанию..." style="
+        width: 100%;
+        padding: 14px 18px;
+        font-size: 16px;
+        border-radius: 12px;
+        border: 1px solid #4e0a99;
+        outline: none;
+        background: #1b0033;
+        color: #fff;
+        box-shadow: 0 0 12px rgba(142, 45, 226, 0.2);
+        transition: border 0.2s;
+      " />
+      <div id="searchResults" style="
+        flex: 1;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        color: #ccc;
+        font-size: 15px;
+      ">
+        <p style="color:#666;">Введите текст для поиска...</p>
+      </div>
+    </div>
+
+    <button id="closeSearchModal" style="
+      position: fixed;
+      top: 20px;
+      right: 28px;
+      background: none;
+      border: none;
+      font-size: 26px;
+      color: #c47aff;
+      cursor: pointer;
+      z-index: 10000;
+      transition: transform 0.15s ease;
+    " title="Закрыть">✖</button>
+  `;
+  document.body.appendChild(searchModal);
+
+  const searchInputModal = document.getElementById("searchInputModal");
+  const resultsContainer = document.getElementById("searchResults");
+
+  // Поиск в модальном окне — с уникальными результатами
+  searchInputModal.oninput = () => {
+    const q = searchInputModal.value.toLowerCase().trim();
+    resultsContainer.innerHTML = "";
+
+    if (!q) {
+      resultsContainer.innerHTML = "<p style='color:#666;'>Введите текст для поиска...</p>";
+      return;
+    }
+
+    const allItems = document.querySelectorAll(".list-item");
+    const results = [];
+    const seen = new Set();
+
+    allItems.forEach((item) => {
+      const name = item.dataset.name?.toLowerCase() || "";
+      const desc = item.dataset.desc?.toLowerCase() || "";
+      if ((name.includes(q) || desc.includes(q)) && !seen.has(name)) {
+        seen.add(name);
+        const clone = item.cloneNode(true);
+        clone.style.display = "flex";
+        results.push(clone);
+      }
+    });
+
+    if (results.length === 0) {
+      resultsContainer.innerHTML = "<p style='color:#555;'>🚫 Ничего не найдено...</p>";
+      return;
+    }
+
+    const wrapper = document.createElement("div");
+    wrapper.className = "list";
+    wrapper.style.display = "block";
+    results.forEach((item) => wrapper.appendChild(item));
+    resultsContainer.appendChild(wrapper);
+  };
+
+  document.getElementById("closeSearchModal").onclick = () => {
+    searchModal.style.display = "none";
+    searchInputModal.value = "";
+    resultsContainer.innerHTML = "<p style='color:#666;'>Введите текст для поиска...</p>";
+  };
+
+  if (searchInput) {
+    searchInput.addEventListener("click", () => {
+      searchModal.style.display = "flex";
+      searchInputModal.value = "";
+      resultsContainer.innerHTML = "<p style='color:#666;'>Введите текст для поиска...</p>";
+      searchInputModal.focus();
+    });
+  }
+
+  // Клик по элементу списка — открывает модалку с деталями
+  document.body.addEventListener("click", (e) => {
+    const item = e.target.closest(".list-item");
+    if (!item) return;
+    const name = item.dataset.name;
+    const desc = item.dataset.desc;
+    const img = item.dataset.img || "https://cdn-icons-png.flaticon.com/512/847/847969.png";
+    const modal = document.createElement("div");
+    modal.className = "modal-user";
+    modal.innerHTML = `
+      <div class="modal-content">
+        <img src="${img}" />
+        <h3>${name}</h3>
+        <p>${desc}</p>
+      </div>`;
+    modal.onclick = () => modal.remove();
+    document.body.appendChild(modal);
   });
+
+  fameTabsWrapper.style.display = "none";
+  updateLists();
+
+  // Дополнительный обработчик для табов fame, если нужно (мб можно убрать, т.к. уже выше)
+  const buttons = document.querySelectorAll('.tabs-fame button');
+  const lists = document.querySelectorAll('.list');
+
+  buttons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      buttons.forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+      const fame = btn.getAttribute('data-fame');
+      lists.forEach(list => list.style.display = 'none');
+      const activeList = document.getElementById(`fame-${fame}`);
+      if (activeList) activeList.style.display = 'block';
+    });
+  });
+});
 </script>
 
 
