--- a/index.html
+++ b/index.html
@@ -611,11 +611,11 @@
 
 О нем : 
 • Бомж
-• Без умений
+• Немощь
 • Скамит даже на 15 звёзд ( бомж мелочный )
-• Пустослов 
+• Пиздабол
 • Интернет герой 
-• НН - неизвестный даже самому телеграмму 
+• НН 
 
 [ В общем бич, удачи всем ]."
             data-img="https://files.catbox.moe/u14hzp.jpg"
@@ -655,11 +655,11 @@
 
 О нем : 
 • Бомж
-• Без умений
+• Немощь
 • Скамит даже на 15 звёзд ( бомж мелочный )
-• Пустослов 
+• Пиздабол
 • Интернет герой 
-• НН - неизвестный даже самому телеграмму 
+• НН
 
 [ В общем бич, удачи всем ]"
             data-img="https://files.catbox.moe/u14hzp.jpg"
