--- a/index.html
+++ b/index.html
@@ -607,19 +607,10 @@
           <div
             class="list-item"
             data-name="@yourealirefack_osint"
-            data-desc="Данная личность - @yourealirefack_osint, бомж и скамер, без умений, то что умеет только пугать, бесплатные пробив боты и фанстат. • его можете не бояться, чувак нихуя не умеет, а ещё мелочный)
+            data-desc='Данная личность - @yourealirefack_osint, бомж и скамер, без умений, то что умеет только пугать, бесплатные пробив боты и фанстат. его можете не бояться, чувак нихуя не умеет, а ещё мелочный) О нем : Бомж Без умений Скамит даже на 15 звёзд ( бомж мелочный ) Пустослов Интернет герой НН - неизвестный даже самому телеграмму [ В общем бич, удачи всем ]'
 
-О нем : 
-• Бомж
-• Без умений
-• Скамит даже на 15 звёзд ( бомж мелочный )
-• Пустослов 
-• Интернет герой 
-• НН - неизвестный даже самому телеграмму 
-
-[ В общем бич, удачи всем ]."
             data-img="https://files.catbox.moe/u14hzp.jpg"
-          >
+            >
             <img src="https://files.catbox.moe/u14hzp.jpg" />
             <div>
               <h4>@yourealirefack_osint</h4>
@@ -651,17 +642,7 @@
           <div
             class="list-item"
             data-name="@yourealirefack_osint"
-            data-desc="Данная личность - @yourealirefack_osint, бомж и скамер, без умений, то что умеет только пугать, бесплатные пробив боты и фанстат. • его можете не бояться, чувак нихуя не умеет, а ещё мелочный)
-
-О нем : 
-• Бомж
-• Без умений
-• Скамит даже на 15 звёзд ( бомж мелочный )
-• Пустослов 
-• Интернет герой 
-• НН - неизвестный даже самому телеграмму 
-
-[ В общем бич, удачи всем ]"
+            data-desc='Данная личность - @yourealirefack_osint, бомж и скамер, без умений, то что умеет только пугать, бесплатные пробив боты и фанстат. его можете не бояться, чувак нихуя не умеет, а ещё мелочный) О нем : Бомж Без умений Скамит даже на 15 звёзд ( бомж мелочный ) Пустослов Интернет герой НН - неизвестный даже самому телеграмму [ В общем бич, удачи всем ]'
             data-img="https://files.catbox.moe/u14hzp.jpg"
           >
             <img src="https://files.catbox.moe/u14hzp.jpg" />
