Upd66666ate index.html

--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
             <img src="https://files.catbox.moe/ncpj76.jpg" />
             <div>
               <h4>valik @valik_702</h4>
-              <p>Ебаный бомж и педофил</p>
+              <p>Ебаный бомж, педофил</p>
             </div>
           </div>
           
